<resources>
    <string name="app_name">hi</string>

    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_download">Download</string>
    <string name="title_notification">Notification</string>
    <string name="title_more">More</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>

    <string name="title_auth">@string/app_name</string>
    <string name="title_auth_info">Basic Information</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>


    <string name="error_email">Please enter your valid email address</string>
    <string name="error_password">The password must be at least 10 characters and use large and small alphanumeric characters.</string>
    <string name="error_auth">This email or password is not exists.</string>
</resources>