<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    auto:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dreampany.hi.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.dreampany.hi.ui.fragment.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_download"
        android:name="com.dreampany.hi.ui.fragment.DownloadFragment"
        android:label="@string/title_download"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.dreampany.hi.ui.fragment.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.dreampany.hi.ui.fragment.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/home_fragment" />
</navigation>